# kr-quant-studio

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  run_server.bat
.devcontainer/: devcontainer.json
.github/workflows/: update-seed-prices.yml
.streamlit/: config.toml
data/seed/: seed_corps.parquet  seed_financials.parquet
scripts/: bulk_sync_all.py  db_shell.py  fix_seed_data.py  generate_report.py  sync_corp_codes.py  sync_financials.py  sync_prices.py
src/krqs/config/: settings.py
src/krqs/data/dart/: client.py  corp_code.py  parsers.py
src/krqs/data/db/: connection.py  schema.sql
src/krqs/data/fdr/: client.py
src/krqs/domain/: gpm_regression.py  log_trend.py  operating_leverage.py  valuation.py
src/krqs/reports/: renderer.py
src/krqs/reports/templates/: base.html.j2  gpm_regression.html.j2  operating_leverage.html.j2
src/krqs/services/: data_sync_service.py  growth_valuation_service.py  price_sync_service.py  report_service.py  screener_service.py  simulator_service.py
src/krqs/ui/: app.py  formatters.py  state.py
src/krqs/ui/components/: price_chart.py
src/krqs/ui/pages/: gpm_regression.py  growth_valuation.py  log_analysis.py  operating_leverage.py  sanity_check.py  screener.py
src/krqs/ui/views/: growth_valuation.py  guide.py  log_analysis.py  (+1 more)
tests/fixtures/: sample_single_acnt.json
tests/unit/: test_corp_code.py  test_dart_parsers.py  test_gpm_regression.py  test_log_trend.py  test_operating_leverage.py  test_report_service.py  test_repositories.py  test_simulator_service.py
(+4 files in other folders)
