[project]
name = "krqs"
version = "0.1.0"
description = "KR Quant Studio — 한국 주식 재무 분석 플랫폼"
requires-python = ">=3.14"
dependencies = [
    "pandas>=2.2",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
data = [
    "httpx>=0.27",
    "tenacity>=8.2",
    "duckdb>=1.1",
    "pyyaml>=6.0",
    "vcrpy>=6.0",
]
ui = [
    "streamlit>=1.40",
    "streamlit-authenticator>=0.3",
    "altair>=5.4",
]
reports = [
    "jinja2>=3.1",
    "weasyprint>=62.0",
]
stats = [
    "statsmodels>=0.14",
    "numpy>=1.26",
    "scipy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/krqs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"

[tool.uv]
package = true
